# LevelNotes

./: .gitignore  package.json  pages-styles.css  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: package.json
apps/desktop/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/frontend/src/: App.tsx  app.css  main.tsx
apps/desktop/frontend/src/components/: ErrorBoundary.tsx  NoteCard.tsx  NoteEditor.tsx  PaperBackground.jsx  PdfClipper.tsx  PdfViewer.tsx  SettingsPanel.tsx  Sidebar.tsx  Workspace.tsx
apps/desktop/frontend/src/extensions/: AutoPagination.ts  Page.ts  PageLayout.ts  PagedDocument.ts
apps/desktop/frontend/src/types/: pdfjs-viewer.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  main.rs.bak
apps/extension/: manifest.json  package.json  tsconfig.json
apps/extension/src/: background.ts  content.ts
package/core/: package.json
package/core/src/: types.ts
package/sdk/: package.json  tsconfig.json
package/sdk/src/: client.ts
